# EduGame

./: local_code.rs  local_code2.rs  local_code3.rs  local_code4.rs
WebInterface [Flask implemented with BS]/: app.py  scraper.py
WebInterface [Flask implemented with BS]/templates/: index.html
WebMode [Request V.1]/: WebInterface.py
edugame/: Cargo.toml
edugame/src/: main.rs
src/: main.rs
